--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
-*.*	working-tree-encoding=CP1251	eol=CRLF
+*.c	working-tree-encoding=CP1251	eol=CRLF
+*.cpp	working-tree-encoding=CP1251	eol=CRLF
+*.h	working-tree-encoding=CP1251	eol=CRLF
